<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.MCmoderSD</groupId>
    <artifactId>Snake</artifactId>
    <version>2.0.0</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <!-- Executor -->
        <dependency>
            <groupId>de.MCmoderSD</groupId>
            <artifactId>executor</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- ImageLoader -->
        <dependency>
            <groupId>de.MCmoderSD</groupId>
            <artifactId>imageloader</artifactId>
            <version>1.0.2</version>
        </dependency>

        <!-- Java Audio Library -->
        <dependency>
            <groupId>de.MCmoderSD</groupId>
            <artifactId>jal</artifactId>
            <version>1.1.0</version>
        </dependency>

        <!-- JsonUtility -->
        <dependency>
            <groupId>de.MCmoderSD</groupId>
            <artifactId>json</artifactId>
            <version>1.1.0</version>
        </dependency>

    </dependencies>

</project>